Story #12113: global code reformat